--- a/src/componentes/menuLateralHome/menuLateralHome.css
+++ b/src/componentes/menuLateralHome/menuLateralHome.css
@@ -5,28 +5,44 @@
     color: #FFFFFF;
     position: relative;
 }
+
+.teste-span{
+    line-height: 1.3;
+    text-align: center;
+    display: block;
+}
 .btn-home, .btn-todosRecursos, .btn-meusRecursos{
-    width: 80%;
-    height: 70px;
+    width: 70%;
     top: 120px;
-    margin-bottom: 15px;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
     position: relative;
+    line-height: 1.3;
+    flex-direction: column;
+    border-radius: 0;
+    border-bottom: 3px solid #e9ecef;
+}
+.icone{
+    width: 70%;
+    height: 70%;
+    color: #e9ecef;
 }
 
 .btn-voltarLogin{
-    width: 80%;
-    height: 70px;
+    width: 100%;
     bottom: 30px;
-    left: 0;
-    right: 0;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
+    position: relative;
+    line-height: 1.3;
+    flex-direction: column;
     position: absolute;
 }
