--- a/src/componentes/gridDuploRecursos/gridDuploRecursos.css
+++ b/src/componentes/gridDuploRecursos/gridDuploRecursos.css
@@ -4,14 +4,37 @@
     top: 0;
     display: grid;
     grid-template-columns: 80px 1fr;
-    background-color: antiquewhite;
     position: absolute;
+}
+
+.bloco{
+    width: 100%;
+    height: 100%;
+    padding-top: 85px;
+    padding-right: 15px;
+    padding-bottom: 15px;
 }
 
 .btn-rotas{
     width: 100%;
     height: 100%;
-    padding-top: 100px;
-    background-color: grey;
+    padding: 40px 70px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    border-radius: 10px;
+    background-color: #ced4da;
+    box-shadow: inset 0 0 8px 4px #8f8f8fad;
     position: relative;
+}
+
+.accordion{
+    background: blanchedalmond;
+}
+.template-recurso{
+    background: blanchedalmond;
+}
+
+.meus-recursos h1{
+    color: #000000;
 }
