--- a/src/componentes/menuLateralRecursos/menuLateralRecursos.css
+++ b/src/componentes/menuLateralRecursos/menuLateralRecursos.css
@@ -2,32 +2,47 @@
     width: 100%;
     height: 100%;
     top: 0;
-    background-color: #000;
     color: #FFFFFF;
     position: relative;
 }
+
+.teste-span{
+    line-height: 1.3;
+    text-align: center;
+    display: block;
+}
 .btn-conteudo, .btn-cores, .btn-salvar{
-    width: 80%;
-    height: 70px;
+    width: 70%;
     top: 120px;
-    margin-bottom: 15px;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
     position: relative;
+    line-height: 1.3;
+    flex-direction: column;
+    border-radius: 0;
+    border-bottom: 3px solid #e9ecef;
+}
+.icone{
+    width: 70%;
+    height: 70%;
+    color: #e9ecef;
 }
 
 .btn-voltarHome{
-    width: 80%;
-    height: 70px;
+    width: 100%;
     bottom: 30px;
-    left: 0;
-    right: 0;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-items: center;
+    position: relative;
+    line-height: 1.3;
+    flex-direction: column;
     position: absolute;
 }
