--- a/src/componentes/todosRecursos/todosRecursos.css
+++ b/src/componentes/todosRecursos/todosRecursos.css
@@ -7,11 +7,20 @@
     position: absolute;
 }
 
+.bloco{
+    width: 100%;
+    height: 100%;
+    padding-top: 85px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+
 .todos-recursos{
     width: 100%;
     height: 100%;
-    padding-top: 100px;
-    background-color: #CACACA;
+    border-radius: 10px;
+    background-color: #ced4da;
+    box-shadow: inset 0 0 8px 4px #8f8f8fad;
     position: relative;
 }
 
